--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,12 @@
-mysql-connector-python==8.0.33 
-numpy==2.2.5
+Flask==3.1.1
+h2==4.2.0
+HTMLParser==0.0.2
+ipython==9.2.0
+ipywidgets==8.1.7
+js==1.0
+keyring==25.6.0
+numpy==2.2.6
 pandas==2.2.3
+thread==2.0.5
+mysql-connector-python==8.0.33 # Or a more recent stable version
+
